sfdx-source/force-app/main/default/objects/OAuth_Config__c/OAuth_Config__c.object-meta.xml
<CustomObject>
    <description>LEM-1285: Configure Netsuite OAuth-1 protocol setting configuration.</description>
    <label>OAuth Config</label>
    <nameField>
        <label>OAuth Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth Configs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>