sfdx-source/force-app/main/default/objects/OAuth_Config__c/fields/Data_Map_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Map_Type__c</fullName>
    <description>LEM-1285: Outbound if request data map
Inbound if response data map</description>
    <inlineHelpText>Outbound if request data map
Inbound if response data map</inlineHelpText>
    <label>Data Map Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>