sfdx-source/force-app/main/default/objects/OAuth_Config__c/fields/Encrypted_Value__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Value__c</fullName>
    <description>LEM-1285: Configure encrypted values like Consumer key, Secret keys.</description>
    <label>Encrypted Value</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>