sfdx-source/force-app/main/default/objects/OAuth_Config__c/fields/Include_In_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1285: This field value contains whether system is required Authorization or not.</description>
    <label>Include In Authorization</label>
    <type>Checkbox</type>
</CustomField>