sfdx-source/force-app/main/default/objects/OAuth_Config__c/fields/Include_In_Header__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1285: Include header in the Authentication request.</description>
    <label>Include In Header</label>
    <type>Checkbox</type>
</CustomField>