sfdx-source/force-app/main/default/objects/OAuth_Config__c/fields/Include_In_Signature__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include In Signature</label>
    <type>Checkbox</type>
</CustomField>