sfdx-source/force-app/main/default/objects/OAuth_Config__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>LEM-1285: It contains Authentication keys.</description>
    <label>Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>