sfdx-source/force-app/main/default/objects/OAuth_Config__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>175</length>
    <type>Text</type>
</CustomField>