sfdx-source/force-app/main/default/objects/OAuth_Config__c/fields/Value_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Value_Encrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1285: It is used to store encrypted value.</description>
    <label>Value Encrypted</label>
    <type>Checkbox</type>
</CustomField>