sfdx-source/force-app/main/default/objects/OAuth_Config__c/fields/Value_Generated__c.field-meta.xml
<CustomField>
    <fullName>Value_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1285: True if value generated at runtime</description>
    <inlineHelpText>True if value generated at runtime</inlineHelpText>
    <label>Value Generated</label>
    <type>Checkbox</type>
</CustomField>