sfdx-source/force-app/main/default/objects/OAuth_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_Map_Type__c</columns>
    <columns>Include_In_Authorization__c</columns>
    <columns>Include_In_Header__c</columns>
    <columns>Include_In_Signature__c</columns>
    <columns>Key__c</columns>
    <columns>Value__c</columns>
    <columns>Encrypted_Value__c</columns>
    <columns>Value_Encrypted__c</columns>
    <columns>Value_Generated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>